--- a/_posts/thesis_chapters/2025-6-6-Gdps_v3.md
+++ b/_posts/thesis_chapters/2025-6-6-Gdps_v3.md
@@ -199,15 +199,16 @@ his design has used several structural constructionist techniques involved in de
 <!-- DEVELOP THIS -  
 For example, In Vignette 5, the goal is to get the image created into the game. -->
 
-In this informal learning context, the overall motivation of participants was on having fun while making an engaging game together rather than explicitly developing to knowledge linked to the computing curriculum, reflected in the overall orientation of this thesis. Given this focus and acknowledging the broad coverage of existing research covering this aspect of CGD&P, this section is limited in scope and aims to contribute through a narrow focus on code patching and subsequent debugging, and the development of digital literacy skills. I have chosen these areas as there were a subject of several observations provoked by the innovative characteristics of the learning design of this research.
+In this informal learning context, the overall motivation of participants was on having fun while making an engaging game together rather than explicitly developing to knowledge linked to the computing curriculum, reflected in the overall orientation of this thesis.
+
+In this context, the play paradox is less extreme and  my approach to the learning design, facilitation and to the methodology of this study reflects this.   
+
+Given this focus and acknowledging the broad coverage of existing research covering this aspect of CGD&P, this section is limited in scope and aims to contribute through a narrow focus on code patching and subsequent debugging, and the development of digital literacy skills. I have chosen these areas as there were a subject of several observations provoked by the innovative characteristics of the learning design of this research.
 
 
 <!-- Specifically there was no testing involved and the interview focus was on socio-cultural aspects.  -->
 
 <!-- In P4 aGiven the potential to adapt this learning design to a more formal environment to address the needs outlined in the introductory chapter, from P2 onwards I began to augment the learning design to suit curriculum-oriented teaching and assessment of computational thinking concepts and skills,  -->
-
-
-
 
 <!-- I return to this subject in Chapter 7.  -->
 <!-- RETURN TO THIS TO REPRESENT SOME OF THE CHALLENGES AND DIFFICULTY OF SWIMMING AGAINST THE STREAM IN TERMS OF COMMODIFICIATION OF TOOLS -->
@@ -224,8 +225,6 @@ A summary of a book chapter [@chesterman_game_2023] exploring these issues with 
 ### The interrelationship of GDPs and the development of personal appropriation of skills and processes
 
 <!-- Due to limited scope of this section I prioritise an analysis here of the technical practices of web literacy,code patching and debugging.  -->
-
-
 
 <!-- While the above learning map is relevant to the overall process of game making. The main focus of this chapter is the exploration of diverse uses of GDPs within this activity, as such I now explore the motivational and mediational uses of GDPs in this personal plane.  -->
 <!-- These processes were sometimes introduced in a basic form through scaffolded activities, supporting documentation, or informal interactions between peers. The following observations illustrate how introduced processes were adapted and modified by the community. -->
@@ -385,15 +384,15 @@ Commentary: Brief theoretical reflection or methodological note
 Bridge or close: One-line takeaway or link to next section -->
 
 
-In this section, I outline findings on the use of the menu of GDPs, focusing on interpersonal interactions. Chapter 5 introduced the provision of a curated collection (menu) of gameplay design patterns to address the tension between participants' choice and the need for documentation to support the technical implementation of code structures. As explored in Chapter 5, to prioritise participant engagement, I avoid a principles-first instruction approach (either to the whole group or to individuals). The use of shorter, just-in-time tutorials reduces barriers associated with more extensive instruction-based approaches, particularly those related to literacy [@dietz_design_2021; @resnick_coding_2020].
+In this section, I outline findings on the use of the use of GDPs within the group to mediate the process of accessing and using project project documentation.
 
-In the Vignette 1 extract above, Toby uses the graphical menu of patterns as a starting point to help him to choose, find and implement a GDP feature using supporting documentation. Later he is able to assist others in adding the same GDPs to their games [^rc2].
+Chapter 5 described the introduction of a curated collection (menu) of gameplay design patterns to address the tension between participants' choice and the need for documentation to support the technical implementation of code structures. To prioritise participant engagement, I avoid a principles-first instruction approach (either to the whole group or to individuals). The use of shorter, just-in-time tutorials was in responses to barriers associated with more extensive instruction-based approaches, particularly those related to literacy [@dietz_design_2021; @resnick_coding_2020].
 
-The following vignette extract concerns a family that had taken a different approach to accessing documentation. In the minutes leading up to extract, Susanna (parent) attempting to implement a key and door mechanic to the game. Meanwhile Tehillah (child), unable to do such coding or debugging, expressed boredom [^kd]. Susanna had been following the step-by-step written instructions but when Susanna had not been able to progress, she sent Tehillah to get my help and I worked with her to find the problem.
+The following extract from Vignette 2 concerns a family that had taken a methdodical approach to accessing documentation. In the minutes leading up to extract, Susanna (parent) attempting to implement a key and door mechanic to the game. Meanwhile Tehillah (child), unable to do such coding or debugging, expressed boredom [^kd]. Susanna(p) [^ip] had been following the step-by-step written instructions but when Susanna had not been able to progress, she sent Tehillah(c) to get my help and I worked with her to find the problem.
 
 | **Dialogue** | **Activity** |
 |--------------|--------------|
-| Susanna: Thank you. Did you see Tehillah?<br>Tehillah: Did it do it?<br>Susanna: Yes | Mick has just ceded computer to Susanna after solving a problem which had occurred due to |
+| Susanna(p): Thank you. Did you see Tehillah?<br>Tehillah(c): Did it do it?<br>Susanna: Yes | Mick has just ceded computer to Susanna after solving a problem which had occurred due to |
 | Susanna: I’ll reload it. Here you go | Susanna presses refresh key to reload the game |
 | Tehillah: (Laughs) | Tehillah moves laptop to point towards her and takes over using the keyboard |
 | Tehillah: (Makes excited cat noise) | Tehillah uses arrow keys to control the game and checks if player progression to level 2 is working. She reaches level 2, where there is no door or key. |
@@ -404,11 +403,26 @@ The following vignette extract concerns a family that had taken a different appr
 | Tehillah: d. Door right there. | Tehillah inserts a “d” in an array high above a platform |
 | Susanna: And where’s the key going?<br>Must be quite hard to get to that door.<br>Key is K |  |
 
+ADD IN IMAGE  
+
 **Table 6.x** – Extract of Vignette 2 showing interpersonal interaction and documentation use.
 
-Vignette 2 shows the parent [^ip], Susanna(p)'s use of a tutorial to address the goal of implementing her child's chosen GDPs. Susanna, who is limited in her programming skills but who avoids seeking facilitator help (see V2.b), leverages the concept of GDPs to independently access written step-by-step instructions.
+Vignette 2 follows the parent Susanna's use of a tutorial to address the goal of implementing her child's chosen GDPs. Susanna, is limited in her programming skills and avoids seeking facilitator or peer help [^fh]. As such, she  independently access written step-by-step instructions as a preferred working approach. Susanna leads the process implementing code changes of patterns chosen by her daughter [^si]. Susanna leverages the concept of the key and door pattern to access relevant documentation.
+
+
+In the Vignette 1 extract above, Toby uses the graphical menu of patterns as a starting point to help him to choose, find and implement a GDP feature using supporting documentation. He takes a more direct approach and does not access the step by step instructions.
+
+Later he is able to assist others in adding the GDPs to their games [^rc2].
+
+THIS IS NOT NAVIGATION - BUT IS RELEVANT CLOSE COUPLING - MY INPUT AS FACILITATOR
+
+THE DIFFICULTY STRUCTURING
+
+This choice appears to have a positive impact on affect.
+
 
 Tehillah(c)'s choice over which GDPs they tackle has helped create a personal connection to the game. Her positive reaction in the vignette above, including the naming and rhythmical chanting of “key” and “door,” indicates affective engagement closely tied to her interaction with the GDP concept. There is also evidence of affective engagement in Toby's laughter and calling out to his Granny when getting unexpected results.
+
 
 While the evidence supports the potential of a menu of GDPs to address the tensions between choice-based approaches and the danger of a lack of relevant scaffolding, there are some important clarifications to make at this point. Firstly, not all participants engage with this menu. For example, in Vignette 3, Ed lets his father take the lead in accessing documentation. Other individuals learn to implement GDPs from peers, a process explored in a later section. Secondly, because the GDP menu (and concepts) were introduced by myself as a navigational and organisational tool for use by participants, it seems logical that participants should use them for that purpose. The danger here is of circular reasoning in methodology which could impact the validity of claims. Despite these clarifications, the data clearly shows the utility of the menu of GDPs to directly help some participants, a clear example of just-in-time documentation supporting participant-led learning  and as a foundational source for the later propagation and evolution of GDP practices by participants.
 
@@ -1293,8 +1307,21 @@ Returning to Kynigos's interpretation of the half-baked game as a boundary objec
 
 [^kd]: The support for the key and door pattern is here. https://3m.flossmanuals.net/#game-mechanic-keys-and-doors
 
-<!-- [^ip]: Where unclear, the name of the parent is followd by a a (p) and that of the child by a (c). For example, Susanna(p) and Tehillah(c). -->
+[^ip]: Where unclear, in this writing, the name of the parent is followd by a (p) and that of the child by a (c). For example, Susanna(p) and Tehillah(c).
 
 [^v6]:  See the reflective commentary in Vignette 6 for a fuller description of this moment.
 
-[^rc2]: See the reflective commentary named _Peer propagation and community uptake of GDPs_ in Vignette 1.
+[^rc2]: See the reflective commentary in the full Vignette 1 named _Peer propagation and community uptake of GDPs_ . This is addressed in a later section of this chapter.
+
+[^fh]: The reflective commentary of Vignette 2 a tension between the child's desire to ask for help to progress and the parent's reluctance is described
+
+[^si]: In this case, her daughter's choice has been influenced by social interactions with the group.  The concept of key and door (a pattern where the player needed to collect a key before progressing through a door in the level) had been discussed as a group previously. See Appendix D.3.map
+
+<!-- STRUCTURE VIA THIS MINI TEMPLATE
+
+Mini-intro: What’s being explored and why it matters
+Empirical evidence: Table or vignette extract
+Interpretation: What it shows (use, affect, interaction)
+Variation: What didn’t happen or where it differed
+Commentary: Brief theoretical reflection or methodological note
+Bridge or close: One-line takeaway or link to next section -->
