--- a/_posts/thesis_chapters/2025-6-6-Gdps_v3.md
+++ b/_posts/thesis_chapters/2025-6-6-Gdps_v3.md
@@ -407,28 +407,21 @@ ADD IN IMAGE
 
 **Table 6.x** – Extract of Vignette 2 showing interpersonal interaction and documentation use.
 
-Vignette 2 follows the parent Susanna's use of a tutorial to address the goal of implementing her child's chosen GDPs. Susanna, is limited in her programming skills and avoids seeking facilitator or peer help [^fh]. As such, she  independently access written step-by-step instructions as a preferred working approach. Susanna leads the process implementing code changes of patterns chosen by her daughter [^si]. Susanna leverages the concept of the key and door pattern to access relevant documentation.
+Vignette 2 follows the parent Susanna's use of a tutorial to address the goal of implementing her child's chosen GDPs. Susanna, is limited in her programming skills but avoids seeking facilitator or peer help [^fh]. As such, she  independently accesses written step-by-step instructions as a preferred working approach. Susanna leads the process implementing code changes of patterns chosen by her daughter [^si]. In this way the pair are able to use the concept of the key and door pattern to help coordinate their project organisation access relevant documentation.
 
+This choice provided over which pattern to implement appears to have a positive impact on affect. Tehillah(c)'s choice over which GDPs they tackle has helped create a personal connection to the game. Her positive reaction in the vignette above, including the naming and rhythmical chanting of “key” and “door,” indicates affective engagement closely tied to her interaction with the GDP concept. There is also evidence of affective engagement in Toby's laughter and calling out to his Granny when getting unexpected results.
 
-In the Vignette 1 extract above, Toby uses the graphical menu of patterns as a starting point to help him to choose, find and implement a GDP feature using supporting documentation. He takes a more direct approach and does not access the step by step instructions.
+I provided participants with a choice of supporting documentation in the form of both step-by-step instructions and code snippets. While both forms of documentation following the structure of close coupling between impact and that is core to the use of design patterns in computing education [@gamma], this decision resulted in varied patterns of use. In the Vignette 1 extract above, Toby uses the graphical menu of patterns as a starting point to help him to choose, find and implement a GDP feature using supporting code snippets directly. Thus in contrast to Vignette 2, he does not access the step by step instructions.  
 
-Later he is able to assist others in adding the GDPs to their games [^rc2].
+<!-- Later Toby is able to assist others in adding GDPs to their games [^rc2]. POTENTIALLY DROP THIS / MOVE -->
+**Commentary**
+In my use of gamePLAY design patterns the coupling is more tangible still for participant experience. the impact in the game is very relatable. LINK TO CH. 7 and LATER FOK
+This extends current research in this area. HOW ? SUMMARY 
 
-THIS IS NOT NAVIGATION - BUT IS RELEVANT CLOSE COUPLING - MY INPUT AS FACILITATOR
-
-THE DIFFICULTY STRUCTURING
-
-This choice appears to have a positive impact on affect.
-
-
-Tehillah(c)'s choice over which GDPs they tackle has helped create a personal connection to the game. Her positive reaction in the vignette above, including the naming and rhythmical chanting of “key” and “door,” indicates affective engagement closely tied to her interaction with the GDP concept. There is also evidence of affective engagement in Toby's laughter and calling out to his Granny when getting unexpected results.
-
-
-While the evidence supports the potential of a menu of GDPs to address the tensions between choice-based approaches and the danger of a lack of relevant scaffolding, there are some important clarifications to make at this point. Firstly, not all participants engage with this menu. For example, in Vignette 3, Ed lets his father take the lead in accessing documentation. Other individuals learn to implement GDPs from peers, a process explored in a later section. Secondly, because the GDP menu (and concepts) were introduced by myself as a navigational and organisational tool for use by participants, it seems logical that participants should use them for that purpose. The danger here is of circular reasoning in methodology which could impact the validity of claims. Despite these clarifications, the data clearly shows the utility of the menu of GDPs to directly help some participants, a clear example of just-in-time documentation supporting participant-led learning  and as a foundational source for the later propagation and evolution of GDP practices by participants.
+While the evidence supports the potential of a menu of GDPs to address the tensions between choice-based approaches and the danger of a lack of relevant scaffolding, there are some important clarifications to make at this point. Firstly, not all participants engage with this menu. For example, in Vignette 3, Ed lets his father take the lead in accessing documentation. Other individuals learn to implement GDPs from peers, a process explored in a later section. Secondly, because the GDP menu (and concepts) were introduced by myself as a navigational and organisational tool for use by participants, it seems logical that participants should use them for that purpose. The danger here is of circular reasoning in methodology which needs to be borne in mind when assessing the scope of this research [^gp]. Despite these clarifications, the data clearly shows the utility of the menu of GDPs to directly help some participants, a clear example of just-in-time documentation supporting participant-led learning and as a foundational source for the later propagation and evolution of GDP practices by participants.
 
 
 ### GDPs used to scaffold ideation and prioritisation processes
-
 
 <!-- Other techniques that leveraged the characteristics of game design patterns to support the ideation process emerged in community design activities. -->
 <!-- NOTE - ADD MORE ON GESTURING  -->
@@ -437,7 +430,8 @@ This section outlines how the use of GDP concepts and supporting tools were used
 
 Chapter 5 outlined one the impact of the provision of the menu of GDPs significantly decreased in time spent in the ideation phase by providing scaffolding and restricting choice.
 
-In addition, video data surfaced frequent use of GDPs concepts as a way to organise and prioritise game making activity. An exchange from Vignette 3 between participants Ed and Mark shows the use of GDP concepts to help resolve a tension between a more chaotic style of working jumping from one goal to another and a parental motivation to prioritise work. The pair's initial listing of features is a brainstorming technique using the approximate names of game design patterns (_get the person animated_, _get an enemy in_, _changing the platforms_, _make a theme tune_). The use of GDPs as a lingua franca as proposed by
+In addition, video data surfaced frequent use of GDPs concepts as a way to organise and prioritise game making activity. An exchange from Vignette 3 between participants Ed and Mark shows the use of GDP concepts to help resolve a tension between a more chaotic style of working jumping from one goal to another and a parental motivation to prioritise work. The pair's initial listing of features is a brainstorming technique using the approximate names of game design patterns (_get the person animated_, _get an enemy in_, _changing the platforms_, _make a theme tune_).
+
 
 The vignette analysis sees the parent _overwhelmed_ with the child's lack of focus on one pattern "_that’s what I mean, you can’t just skip around like that_."
 
@@ -453,6 +447,9 @@ The following exchange (Table 6.x) captures a moment where the GDP concepts are 
 | Dan: There are games where things drop down like Tetris.<br>Toby: …game. You could have a game where every 15 seconds, 10 seconds, you could add an enemy to such and such, a random number between such and such. You could block it somewhere. | Dan makes a shape with hand and moves it up and down. Toby holds up hands to indicate a range of parameters as he says “between such and such.” |
 | Dan: So instead of... instead of the world… the world being sideways, we could have the world being looked down on. | Dan reindicates the change of perspective with hand gestures. |
 | Toby: Hmm. How should I do this then?<br>Dan: That’s a good question. Shall we ask Mick to see if that would mess things up or not? |  |
+
+
+The use of GDPs as a lingua franca as proposed by Erickson and colleagues [-@erickson_lingua_2000; -@eriksson_using_2019]
 
 
 In the vignette extract above, home-based knowledge of GDP mechanics is utilised on an interpersonal plane, with Dan(p) helping Toby(c) via guided facilitation to provoke and shape new design ideas. Dan(p) draw on the game playing experiences to promote innovation in the design of the existing template: _"the previous style of game was a platform (makes shape with hands) game wasn't it? You went along and there was gravity pushing down. There are other types of games aren't there?"_ The pair use their knowledge of game play patterns and genre conventions to break out of the genre constraints of starting template.  Here they are charting new territory beyond the curated choices of GDPs and as such may not have vocabulary to express concepts. Both Dan and Toby make extensive use of gestures in their interaction reinforces their spoken references to GDP concepts.
@@ -1315,7 +1312,9 @@ Returning to Kynigos's interpretation of the half-baked game as a boundary objec
 
 [^fh]: The reflective commentary of Vignette 2 a tension between the child's desire to ask for help to progress and the parent's reluctance is described
 
-[^si]: In this case, her daughter's choice has been influenced by social interactions with the group.  The concept of key and door (a pattern where the player needed to collect a key before progressing through a door in the level) had been discussed as a group previously. See Appendix D.3.map
+[^si]: In this case, her daughter's choice has been influenced by social interactions with the group.  The concept of key and door (a pattern where the player needed to collect a key before progressing through a door in the level) had been discussed as a group previously. In Appendix D.3.map, the key and pattern is also identified in group discussion one of the harder to implement.
+
+[^gp]: My input into the structuring of the menu of GDPs and the supporting documentation is also relevant as a factor in guided participation.
 
 <!-- STRUCTURE VIA THIS MINI TEMPLATE
 
