--- a/_posts/thesis_chapters/2025-6-6-Gdps_v3.md
+++ b/_posts/thesis_chapters/2025-6-6-Gdps_v3.md
@@ -386,9 +386,11 @@ Bridge or close: One-line takeaway or link to next section -->
 
 In this section, I outline findings on the use of the use of GDPs within the group to mediate the process of accessing and using project project documentation.
 
-Chapter 5 described the introduction of a curated collection (menu) of gameplay design patterns to address the tension between participants' choice and the need for documentation to support the technical implementation of code structures. To prioritise participant engagement, I avoid a principles-first instruction approach (either to the whole group or to individuals). The use of shorter, just-in-time tutorials was in responses to barriers associated with more extensive instruction-based approaches, particularly those related to literacy [@dietz_design_2021; @resnick_coding_2020].
+Chapter 5 described the introduction of a curated collection (menu) of gameplay design patterns to address the tension between participants' choice and the need for documentation to support the technical implementation of code structures. My design input here can be seen through the lens of Rogoff's  [@rogoff_observing_1995] three planes interpretation as a form of guided participation [^cgp].
 
-The following extract from Vignette 2 concerns a family that had taken a methdodical approach to accessing documentation. In the minutes leading up to extract, Susanna (parent) attempting to implement a key and door mechanic to the game. Meanwhile Tehillah (child), unable to do such coding or debugging, expressed boredom [^kd]. Susanna(p) [^ip] had been following the step-by-step written instructions but when Susanna had not been able to progress, she sent Tehillah(c) to get my help and I worked with her to find the problem.
+
+
+The following extract from Vignette 2 concerns a family that had taken a methodical approach to accessing documentation. In the minutes leading up to extract, Susanna (parent) attempting to implement a key and door mechanic to the game. Meanwhile Tehillah (child), unable to do such coding or debugging, expressed boredom [^kd]. Susanna(p) [^ip] had been following the step-by-step written instructions but when Susanna had not been able to progress, she sent Tehillah(c) to get my help and I worked with her to find the problem.
 
 | **Dialogue** | **Activity** |
 |--------------|--------------|
@@ -409,6 +411,8 @@ ADD IN IMAGE
 
 Vignette 2 follows the parent Susanna's use of a tutorial to address the goal of implementing her child's chosen GDPs. Susanna, is limited in her programming skills but avoids seeking facilitator or peer help [^fh]. As such, she  independently accesses written step-by-step instructions as a preferred working approach. Susanna leads the process implementing code changes of patterns chosen by her daughter [^si]. In this way the pair are able to use the concept of the key and door pattern to help coordinate their project organisation access relevant documentation.
 
+To prioritise participant engagement, supporting documentation avoided a principles-first instruction approach (either to the whole group or to individuals). The use of shorter, just-in-time tutorials was in responses to barriers associated with more extensive instruction-based approaches, particularly those related to literacy [@dietz_design_2021; @resnick_coding_2020].
+
 This choice provided over which pattern to implement appears to have a positive impact on affect. Tehillah(c)'s choice over which GDPs they tackle has helped create a personal connection to the game. Her positive reaction in the vignette above, including the naming and rhythmical chanting of “key” and “door,” indicates affective engagement closely tied to her interaction with the GDP concept. There is also evidence of affective engagement in Toby's laughter and calling out to his Granny when getting unexpected results.
 
 I provided participants with a choice of supporting documentation in the form of both step-by-step instructions and code snippets. While both forms of documentation following the structure of close coupling between impact and that is core to the use of design patterns in computing education [@gamma], this decision resulted in varied patterns of use. In the Vignette 1 extract above, Toby uses the graphical menu of patterns as a starting point to help him to choose, find and implement a GDP feature using supporting code snippets directly. Thus in contrast to Vignette 2, he does not access the step by step instructions.  
@@ -416,7 +420,7 @@ I provided participants with a choice of supporting documentation in the form of
 <!-- Later Toby is able to assist others in adding GDPs to their games [^rc2]. POTENTIALLY DROP THIS / MOVE -->
 **Commentary**
 In my use of gamePLAY design patterns the coupling is more tangible still for participant experience. the impact in the game is very relatable. LINK TO CH. 7 and LATER FOK
-This extends current research in this area. HOW ? SUMMARY 
+This extends current research in this area. HOW ? SUMMARY
 
 While the evidence supports the potential of a menu of GDPs to address the tensions between choice-based approaches and the danger of a lack of relevant scaffolding, there are some important clarifications to make at this point. Firstly, not all participants engage with this menu. For example, in Vignette 3, Ed lets his father take the lead in accessing documentation. Other individuals learn to implement GDPs from peers, a process explored in a later section. Secondly, because the GDP menu (and concepts) were introduced by myself as a navigational and organisational tool for use by participants, it seems logical that participants should use them for that purpose. The danger here is of circular reasoning in methodology which needs to be borne in mind when assessing the scope of this research [^gp]. Despite these clarifications, the data clearly shows the utility of the menu of GDPs to directly help some participants, a clear example of just-in-time documentation supporting participant-led learning and as a foundational source for the later propagation and evolution of GDP practices by participants.
 
@@ -428,12 +432,14 @@ While the evidence supports the potential of a menu of GDPs to address the tensi
 
 This section outlines how the use of GDP concepts and supporting tools were used in ideation and project organisation.
 
-Chapter 5 outlined one the impact of the provision of the menu of GDPs significantly decreased in time spent in the ideation phase by providing scaffolding and restricting choice.
-
-In addition, video data surfaced frequent use of GDPs concepts as a way to organise and prioritise game making activity. An exchange from Vignette 3 between participants Ed and Mark shows the use of GDP concepts to help resolve a tension between a more chaotic style of working jumping from one goal to another and a parental motivation to prioritise work. The pair's initial listing of features is a brainstorming technique using the approximate names of game design patterns (_get the person animated_, _get an enemy in_, _changing the platforms_, _make a theme tune_).
+Chapter 5 outlined the impact of the provision of the menu of GDPs significantly decreased in time spent in the ideation phase by providing scaffolding and restricting choice. DID IT OR DO IT HERE?
 
 
-The vignette analysis sees the parent _overwhelmed_ with the child's lack of focus on one pattern "_that’s what I mean, you can’t just skip around like that_."
+An exchange from Vignette 3 between participants Ed(c) and Mark(p) shows the use of GDP concepts to help resolve a tension between a more chaotic style of working jumping from one goal to another and a parental motivation to prioritise work more systematically. The pair's initial listing of features is a brainstorming technique using the approximate names of game design patterns (_get the person animated_, _get an enemy in_, _changing the platforms_, _make a theme tune_). Mark (p) becomes _overwhelmed_ with the child's lack of focus on one pattern "_that’s what I mean, you can’t just skip around like that_." [^v3]
+
+In a session in P3, Toby uses the code based tilemap tool to design a maze game instead of a platformer game drawing on existing knowledge of tools and home knowledge of the target game genre to rapidly make revisions without extensive planning [^v6]. This use of GDPs to allow the spacial exploration of design in a visual and intuitive way suits being mapped onto paper, or onto graphical software which allows for a similarly rapid prototyping. By way of contrast, other pairs take advantage of paper prototyping. For example, Susanna notices her child's difficulty in using cursor and delete/backspace keys to edit a matrix allowing level design. The parent provides a book with grid paper to allow the child to replicate the matrix. The parent is then able to transcribe the design to the code example while engaging the child by checking she has interpreted the design correctly. Interview data with Mark and Ed uncovers complexities in the use of both digital and paper prototyping of related to GDPs explored in more detail in Appendix.tech.prototyping.
+WHY IMPORTANT?
+
 
 The following exchange (Table 6.x) captures a moment where the GDP concepts are used to structure a ideation proposing a more radical change of underlying game genre.
 
@@ -449,17 +455,18 @@ The following exchange (Table 6.x) captures a moment where the GDP concepts are 
 | Toby: Hmm. How should I do this then?<br>Dan: That’s a good question. Shall we ask Mick to see if that would mess things up or not? |  |
 
 
-The use of GDPs as a lingua franca as proposed by Erickson and colleagues [-@erickson_lingua_2000; -@eriksson_using_2019]
-
 
 In the vignette extract above, home-based knowledge of GDP mechanics is utilised on an interpersonal plane, with Dan(p) helping Toby(c) via guided facilitation to provoke and shape new design ideas. Dan(p) draw on the game playing experiences to promote innovation in the design of the existing template: _"the previous style of game was a platform (makes shape with hands) game wasn't it? You went along and there was gravity pushing down. There are other types of games aren't there?"_ The pair use their knowledge of game play patterns and genre conventions to break out of the genre constraints of starting template.  Here they are charting new territory beyond the curated choices of GDPs and as such may not have vocabulary to express concepts. Both Dan and Toby make extensive use of gestures in their interaction reinforces their spoken references to GDP concepts.
 
-Later in the same session [^v6], Toby uses the code based tilemap tool to design a maze game instead of a platformer game drawing on existing knowledge of tools and home knowledge of the target game genre to rapidly make revisions without extensive planning. This use of GDPs to allow the spacial exploration of design in a visual and intuitive way suits being mapped onto paper, or onto graphical software which allows for a similarly rapid prototyping. By way of contrast, other pairs take advantage of paper prototyping. For example, Susanna notices her child's difficulty in using cursor and delete/backspace keys to edit a matrix allowing level design. The parent provides a book with grid paper to allow the child to replicate the matrix. The parent is then able to transcribe the design to the code example while engaging the child by checking she has interpreted the design correctly. Interview data with Mark and Ed uncovers complexities in the use of both digital and paper prototyping of related to GDPs explored in more detail in Appendix.tech.prototyping.
-WHY IMPORTANT?
+**Commentary**
+
+The use of GDPs as a lingua franca as proposed by Erickson and colleagues [-@erickson_lingua_2000; -@eriksson_using_2019]
+
+**Link**
 
 This section has addressed use of GDPs within ideation, specifically as a lingua franca, as a visual prototyping tool, and within participant gestural interaction.
 
-LINGUA FRANCA OVERLOAD.
+
 
 <!-- IS SOME SYNTHESIS NEEDED TO END THIS SECTION? -->
 
@@ -1304,6 +1311,8 @@ Returning to Kynigos's interpretation of the half-baked game as a boundary objec
 
 [^kd]: The support for the key and door pattern is here. https://3m.flossmanuals.net/#game-mechanic-keys-and-doors
 
+[^cgp]: Clarify guided the form of guided participation.
+
 [^ip]: Where unclear, in this writing, the name of the parent is followd by a (p) and that of the child by a (c). For example, Susanna(p) and Tehillah(c).
 
 [^v6]:  See the reflective commentary in Vignette 6 for a fuller description of this moment.
@@ -1315,6 +1324,8 @@ Returning to Kynigos's interpretation of the half-baked game as a boundary objec
 [^si]: In this case, her daughter's choice has been influenced by social interactions with the group.  The concept of key and door (a pattern where the player needed to collect a key before progressing through a door in the level) had been discussed as a group previously. In Appendix D.3.map, the key and pattern is also identified in group discussion one of the harder to implement.
 
 [^gp]: My input into the structuring of the menu of GDPs and the supporting documentation is also relevant as a factor in guided participation.
+
+[^v3]: For a fuller transcript and a reflective commentary of this exchange see Vignette 3.
 
 <!-- STRUCTURE VIA THIS MINI TEMPLATE
 
